--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
     "@google/genai": "https://esm.sh/@google/genai@1.3.0",
     "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.39.3",
     "react-dom/": "https://esm.sh/react-dom@^18.2.0/",
-    "react/": "https://esm.sh/react@^18.2.0/"
+    "react/": "https://esm.sh/react@^18.2.0/",
+    "@vercel/node": "https://esm.sh/@vercel/node@^5.5.33",
+    "crypto": "https://esm.sh/crypto@^1.0.1",
+    "buffer": "https://esm.sh/buffer@^6.0.3"
   }
 }
 </script>
